# automation-toolkit

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: file-organizer-ci.yml
file-organizer/: README.md  pyproject.toml
file-organizer/src/file_organizer/: __init__.py  classifiers.py  cli.py  exceptions.py  organizer.py
file-organizer/tests/: test_classifiers.py  test_cli.py  test_organizer.py
titanic-survival-prediction/: LICENSE
